--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -137,14 +137,10 @@
             \definecolor{ududff}{rgb}{0.30196078431372547,0.30196078431372547,1.}
             \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
                 \clip(-3.32,-2.22) rectangle (8.28,7.16);
-                \draw [shift={(-1.66,1.84)},line width=1.2pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.10000000149011612] (0,0) -- (-22.750976342787634:1.2) arc (-22.750976342787634:35.702202191216706:1.2) -- cycle;
-                \draw [shift={(-1.66,1.84)},->,line width=1.2pt,color=qqwuqq] (-22.750976342787634:1.2) arc (-22.750976342787634:35.702202191216706:1.2);
-                \draw [line width=1.2pt] (-1.66,1.84)-- (3.6,5.62);
-                \draw [line width=1.2pt] (1.0674473317121247,3.8000286908501586) -- (1.057535863562698,3.6081908353598435);
-                \draw [line width=1.2pt] (1.0674473317121247,3.8000286908501586) -- (0.8824641364373017,3.8518091646401564);
-                \draw [line width=1.2pt] (-1.66,1.84)-- (3.92,-0.5);
-                \draw [line width=1.2pt] (1.2406633258194237,0.6235927988499189) -- (1.071990998562399,0.5316708427257207);
-                \draw [line width=1.2pt] (1.2406633258194237,0.6235927988499189) -- (1.1880090014376012,0.808329157274279);
+                \draw [shift={(-1.66,1.84)},line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.10000000149011612] (0,0) -- (-22.750976342787634:1.2) arc (-22.750976342787634:35.702202191216706:1.2) -- cycle;
+                \draw [shift={(-1.66,1.84)},->,line width=0.8pt,color=qqwuqq] (-22.750976342787634:1.2) arc (-22.750976342787634:35.702202191216706:1.2);
+                \draw [->,line width=0.8pt] (-1.66,1.84)-- (3.6,5.62);
+                \draw [->,line width=0.8pt] (-1.66,1.84)-- (3.92,-0.5);
                 \begin{scriptsize}
                 \draw [fill=ududff] (3.92,-0.5) circle (2.5pt);
                 \draw[color=ududff] (4.06,-0.13) node {$A$};
@@ -152,9 +148,9 @@
                 \draw[color=ududff] (-1.52,2.21) node {$B$};
                 \draw [fill=ududff] (3.6,5.62) circle (2.5pt);
                 \draw[color=ududff] (3.74,5.99) node {$C$};
-                \draw[color=qqwuqq] (-0.66,1.99) node {$\alpha$};
-                \draw[color=black,sloped] (1.2,3.65) node {$c$};
-                \draw[color=black,pos=.3,below,sloped] (1.06,0.55) node {$a$};
+                \draw[color=qqwuqq] (-0.9,1.9) node {$\alpha$};
+                \draw[color=black,sloped,above] (1.2,4) node {$c$};
+                \draw[color=black,pos=.3,below,sloped] (1.2,0.525) node {$a$};
                 \end{scriptsize}
             \end{tikzpicture}
         \end{minipage}
@@ -163,7 +159,27 @@
         \begin{minipage}{0.5\textwidth}\paragraph{} Ein Winkel $\alpha$ wird zudem immer so angegeben, dass $\alpha\in I; I = [-\pi,\pi]$ gilt. Dies bedeutet, dass man nur Winkel zwischen $0°$ und $180°$ erhält, und das in beide \glqq Richtungen\grqq, als im mathematisch positiven und negativen Sinn. Diese Einschränkung kennzeichnet man mit dem Ausdruck \glqq \textbf{modulo $2\pi$}\grqq.
         \end{minipage}
         \begin{minipage}{0.5\textwidth}
-            \includegraphics[width=4.7in]{kap5/Orientierte_Winkel}
+            \definecolor{qqwuqq}{rgb}{0.,0.39215686274509803,0.}
+            \definecolor{ududff}{rgb}{0.30196078431372547,0.30196078431372547,1.}
+            \definecolor{qududf}{rgb}{0.3,0.3,0}
+            \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
+                \clip(-3.32,-2.22) rectangle (8.28,7.16);
+                \draw [shift={(-1.66,1.84)},line width=0.8pt,color=qududf,fill=qududf,fill opacity=0.10000000149011612] (0,0) -- (-22.750976342787634:1.2) arc (-22.750976342787634:35.702202191216706:1.2) -- cycle;
+                \draw [shift={(-1.66,1.84)},<-,line width=0.8pt,color=qududf] (-22.750976342787634:1.2) arc (-22.750976342787634:35.702202191216706:1.2);
+                \draw [->,line width=0.8pt] (-1.66,1.84)-- (3.6,5.62);
+                \draw [->,line width=0.8pt] (-1.66,1.84)-- (3.92,-0.5);
+                \begin{scriptsize}
+                \draw [fill=ududff] (3.92,-0.5) circle (2.5pt);
+                \draw[color=ududff] (4.06,-0.13) node {$A$};
+                \draw [fill=ududff] (-1.66,1.84) circle (2.5pt);
+                \draw[color=ududff] (-1.52,2.21) node {$B$};
+                \draw [fill=ududff] (3.6,5.62) circle (2.5pt);
+                \draw[color=ududff] (3.74,5.99) node {$C$};
+                \draw[color=qqwuqq] (-0.9,1.9) node {$\alpha$};
+                \draw[color=black,sloped,above] (1.2,4) node {$c$};
+                \draw[color=black,pos=.3,below,sloped] (1.2,0.525) node {$a$};
+                \end{scriptsize}
+            \end{tikzpicture}
         \end{minipage}
 
     \subsection{Rechnungen mit Winkeln}
@@ -171,9 +187,9 @@
         \paragraph{} Bei Berechnungen von Winkeln zwischen Vektoren geht man genau wie in der elementaren Geometrie vor. So wird die Differenz zwischen zwei Winkeln $\theta_{1}$ und $\theta_{2}$ wie gehabt berechnet: $\Delta\theta = \theta_{1} - \theta{2}$. Jedoch benötigt man weitere Rechenregeln, um mit Winkeln rechnen zu können.
         \\
         \begin{Theorem}
-            \underline{Relation de Chasles}: \\
-            $(\vv{u},\vv{w})+(\vv{w},\vv{v})=(\vv{u},\vv{v});\text{ }modulo\text{ }2\pi$ \\
-            \underline{Umwandlungen}: \\
+            \underline{Relation de Chasles}: \\\\
+            $(\vv{u},\vv{w})+(\vv{w},\vv{v})=(\vv{u},\vv{v});\text{ }modulo\text{ }2\pi$ \\\\
+            \underline{Umformungen}: \\\\
             $(\vv{u},\vv{v})=-(\vv{v},\vv{u})$ \\
             $(-\vv{u},-\vv{v})=(\vv{u},\vv{v})$ \\
             $(\vv{u},\vv{v})=\pi+(-\vv{u},\vv{v})$ \\
@@ -190,21 +206,22 @@
             \definecolor{qqwuqq}{rgb}{0.,0.39215686274509803,0.}
             \definecolor{ududff}{rgb}{0.30196078431372547,0.30196078431372547,1.}
             \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
-            \clip(-1.1255390990057683,-1.0518480615872037) rectangle (5.320281411260619,2.5845676602423175);
-            \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.10000000149011612] (0,0) -- (1,0) arc (0:30:1) -- cycle;
-            \draw [line width=0.8pt,color=qqttqq,fill=qqttqq,fill opacity=0.10000000149011612] (0,0) -- (2,0) arc (0:30:2) -- cycle;
-            \draw [->,line width=0.8pt,color=qqwuqq] (1,0) arc (0:30:1);
-            \draw [->,line width=0.8pt] (0.,0.) -- (3.464101615137755,2.);
-            \draw [->,line width=0.8pt] (0.,0.) -- (4.,0.);
-            \draw [<-,line width=0.8pt,color=qqttqq] (2,0) arc (0:30:2);
-            \begin{scriptsize}
-            \draw [fill=ududff] (0,0) circle (0.8pt);
-            \draw[color=ududff] (-0.3,0.1) node {$O$};
-            \draw[color=qqwuqq] (1.7,0.5) node {$\alpha$};
-            \draw[color=black] (1.6385943541409,1.14344841797704) node {$\vv{v}$};
-            \draw[color=black] (2.0122376776899444,-0.17617052770941224) node {$\vv{u}$};
-            \draw[color=qqttqq] (0.6,0.15) node {$\beta$};
-            \end{scriptsize}
+                \clip(-1.1255390990057683,-1.0518480615872037) rectangle (5.320281411260619,2.5845676602423175);
+                \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.10000000149011612] (0,0) -- (1,0) arc (0:30:1) -- cycle;
+                \draw [line width=0.8pt,color=qqttqq,fill=qqttqq,fill opacity=0.10000000149011612] (0,0) -- (2,0) arc (0:30:2) -- cycle;
+                \draw [->,line width=0.8pt,color=qqwuqq] (1,0) arc (0:30:1);
+                \draw [->,line width=0.8pt] (0.,0.) -- (3.464101615137755,2.);
+                \draw [->,line width=0.8pt] (0.,0.) -- (4.,0.);
+                \draw [<-,line width=0.8pt,color=qqttqq] (2,0) arc (0:30:2);
+                \begin{scriptsize}
+                    \draw[fill=ududff] (0,0) circle (0.8pt);
+                    \draw (-0.4,2) node {(1)};
+                    \draw[color=ududff] (-0.3,0.1) node {$O$};
+                    \draw[color=qqwuqq] (1.7,0.5) node {$\alpha$};
+                    \draw[color=black] (1.6385943541409,1.14344841797704) node {$\vv{v}$};
+                    \draw[color=black] (2.0122376776899444,-0.17617052770941224) node {$\vv{u}$};
+                    \draw[color=qqttqq] (0.6,0.15) node {$\beta$};
+                \end{scriptsize}
             \end{tikzpicture}
         \end{minipage}
         \begin{minipage}{0.1\textwidth}
@@ -215,51 +232,83 @@
             \definecolor{qqwuqq}{rgb}{0,0.39215686274509803,0}
             \definecolor{ududff}{rgb}{0.30196078431372547,0.30196078431372547,1}
             \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
-            \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.10000000149011612] (0,0) -- (1,0) arc (0:30:1) -- cycle;
-            \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.10000000149011612] (0,0) -- (-1,0) arc (180:210:1) -- cycle;
-            \draw [->,line width=0.8pt,color=qqwuqq] (1,0) arc (0:30:1);
-            \draw [->,line width=0.8pt] (0,0) -- (3.464101615137755,2);
-            \draw [->,line width=0.8pt] (0,0) -- (4,0);
-            \draw [->,line width=0.8pt] (0,0) -- (-3.464101615137755,-2);
-            \draw [->,line width=0.8pt] (0,0) -- (-4,0);
-            \draw [->,line width=0.8pt,color=qqwuqq] (-1,0) arc (180:210:1);
-            \begin{scriptsize}
-            \draw [fill=ududff] (0,0) circle (0.8pt);
-            \draw[color=ududff] (-0.3,0.1) node {$O$};
-            \draw[color=qqwuqq] (-0.6,-0.175) node {$\beta$};
-            \draw[color=black] (1.6385943541409,1.14344841797704) node {$\vv{v}$};
-            \draw[color=black] (2.0122376776899444,-0.17617052770941224) node {$\vv{u}$};
-            \draw[color=qqttqq] (0.6,0.15) node {$\beta$};
-            \end{scriptsize}
+                \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.10000000149011612] (0,0) -- (1.5,0) arc (0:30:1.5) -- cycle;
+                \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.10000000149011612] (0,0) -- (-1.5,0) arc (180:210:1.5) -- cycle;
+                \draw [->,line width=0.8pt,color=qqwuqq] (1.5,0) arc (0:30:1.5);
+                \draw [->,line width=0.8pt] (0,0) -- (3.464101615137755,2);
+                \draw [->,line width=0.8pt] (0,0) -- (4,0);
+                \draw [->,line width=0.8pt] (0,0) -- (-3.464101615137755,-2);
+                \draw [->,line width=0.8pt] (0,0) -- (-4,0);
+                \draw [->,line width=0.8pt,color=qqwuqq] (-1.5,0) arc (180:210:1.5);
+                \begin{scriptsize}
+                    \draw [fill=ududff] (0,0) circle (0.8pt);
+                    \draw (-3,1.5) node {(2)};
+                    \draw[color=ududff] (-0.2,0.25) node {$O$};
+                    \draw[color=qqwuqq] (-1,-0.3) node {$\beta$};
+                    \draw[color=black] (1.6385943541409,1.14344841797704) node {$\vv{v}$};
+                    \draw[color=black] (2.0122376776899444,-0.17617052770941224) node {$\vv{u}$};
+                    \draw[color=black] (-1.6385943541409,-1.14344841797704) node {$-\vv{v}$};
+                    \draw[color=black] (-2.0122376776899444,0.17617052770941224) node {$-\vv{u}$};
+                    \draw[color=qqttqq] (1,0.3) node {$\beta$};
+                \end{scriptsize}
             \end{tikzpicture}
         \end{minipage}
 
-        \begin{minipage}{0.3\textwidth}
+        \begin{minipage}{0.5\textwidth}
             \definecolor{qqttqq}{rgb}{0.,0.2,0.}
             \definecolor{qqwuqq}{rgb}{0.,0.39215686274509803,0.}
             \definecolor{ududff}{rgb}{0.30196078431372547,0.30196078431372547,1.}
             \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
-            \clip(-1.1255390990057683,-1.0518480615872037) rectangle (5.320281411260619,2.5845676602423175);
-            \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.10000000149011612] (0,0) -- (1,0) arc (0:30:1) -- cycle;
-            \draw [line width=0.8pt,color=qqttqq,fill=qqttqq,fill opacity=0.10000000149011612] (0,0) -- (2,0) arc (0:30:2) -- cycle;
-            \draw [->,line width=0.8pt,color=qqwuqq] (1,0) arc (0:30:1);
-            \draw [->,line width=0.8pt] (0.,0.) -- (3.464101615137755,2.);
-            \draw [->,line width=0.8pt] (0.,0.) -- (4.,0.);
-            \draw [<-,line width=0.8pt,color=qqttqq] (2,0) arc (0:30:2);
-            \begin{scriptsize}
-            \draw [fill=ududff] (0,0) circle (0.8pt);
-            \draw[color=ududff] (-0.3,0.1) node {$O$};
-            \draw[color=qqwuqq] (1.7,0.5) node {$\alpha$};
-            \draw[color=black] (1.6385943541409,1.14344841797704) node {$\vv{v}$};
-            \draw[color=black] (2.0122376776899444,-0.17617052770941224) node {$\vv{u}$};
-            \draw[color=qqttqq] (0.6,0.15) node {$\beta$};
-            \end{scriptsize}
+                \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.10000000149011612] (0,0) -- (1.5,0) arc (0:30:1.5) -- cycle;
+                \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.10000000149011612] (0,0) -- (0.86602540378,0.5) arc (30:180:1) -- cycle;
+                \draw [->,line width=0.8pt,color=qqwuqq] (1.5,0) arc (0:30:1.5);
+                \draw [<-,line width=0.8pt,color=qqwuqq] (0.86602540378,0.5) arc (30:180:1);
+                \draw [->,line width=0.8pt] (0,0) -- (3.464101615137755,2);
+                \draw [->,line width=0.8pt] (0,0) -- (4,0);
+                \draw [->,line width=0.8pt] (0,0) -- (-4,0);
+                \begin{scriptsize}
+                    \draw [fill=ududff] (0,0) circle (0.8pt);
+                    \draw (-3.5,2) node {(3)};
+                    \draw[color=ududff] (-0.25,-0.2) node {$O$};
+                    \draw[color=black] (1.6385943541409,1.14344841797704) node {$\vv{v}$};
+                    \draw[color=black] (2.0122376776899444,-0.17617052770941224) node {$\vv{u}$};
+                    \draw[color=black] (-2.0122376776899444,0.17617052770941224) node {$-\vv{u}$};
+                    \draw[color=qqttqq] (0.8,0.25) node {$\beta$};
+                    \draw[color=qqttqq] (-0.1,0.45) node {$\alpha$};
+                \end{scriptsize}
+            \end{tikzpicture}
+        \end{minipage}
+        \begin{minipage}{0.5\textwidth}
+            \definecolor{qqttqq}{rgb}{0.,0.2,0.}
+            \definecolor{qqwuqq}{rgb}{0.,0.39215686274509803,0.}
+            \definecolor{ududff}{rgb}{0.30196078431372547,0.30196078431372547,1.}
+            \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
+                \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.10000000149011612] (0,0) -- (1.5,0) arc (0:30:1.5) -- cycle;
+                \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.10000000149011612] (0,0) -- (-0.86602540378,-0.5) arc (210:360:1) -- cycle;
+                \draw [->,line width=0.8pt,color=qqwuqq] (1.5,0) arc (0:30:1.5);
+                \draw [->,line width=0.8pt,color=qqwuqq] (-0.86602540378,-0.5) arc (210:360:1);
+                \draw [->,line width=0.8pt] (0,0) -- (3.464101615137755,2);
+                \draw [->,line width=0.8pt] (0,0) -- (4,0);
+                \draw [->,line width=0.8pt] (0,0) -- (-3.464101615137755,-2);
+                \begin{scriptsize}
+                    \draw [fill=ududff] (0,0) circle (0.8pt);
+                    \draw (-3.5,2) node {(3)};
+                    \draw[color=ududff] (-0.25,0.25) node {$O$};
+                    \draw[color=black] (1.6385943541409,1.14344841797704) node {$\vv{v}$};
+                    \draw[color=black] (2.0122376776899444,-0.17617052770941224) node {$\vv{u}$};
+                    \draw[color=black] (-1.6385943541409,-1.14344841797704) node {$-\vv{v}$};
+                    \draw[color=qqttqq] (0.8,0.25) node {$\beta$};
+                    \draw[color=qqttqq] (0.1,-0.45) node {$\alpha$};
+                \end{scriptsize}
             \end{tikzpicture}
         \end{minipage}
 
 \section{Geraden}
 \section{Ebenen}
 \section{Skalarprodukt}
+\section{Kreuzprodukt}
+\section{Spatprodukt}
+\section{Dyadisches Produkt}
 \section{S"atze}
 
 \subsection{Der Satz des Apollinius}
@@ -398,4 +447,3 @@ Eine Innenwinkelhalbierende eines Dreiecks teilt die gegen"uberliegende Seite im
 \end{center}
 \end{small}
 Quelle (Apollinus) : Tobias Rave, 06.03.18, Skript 1ere SBC S.68-71
-
